deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaos-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chaos-app
  template:
    metadata:
      labels:
        app: chaos-app
    spec:
      containers:
      - name: chaos-app
        image: chaos-app
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
